force-app/main/default/objects/Village_Rating__c/Village_Rating__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold Village Rating League Tables used in the automatic calculation of Ratings as part of the Strategic Brand Mix</description>
    <label>Village Ratings</label>
    <nameField>
        <label>Village Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Village Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>