force-app/main/default/objects/Village_Rating__c/fields/Range_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Range_Maximum__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the maximum or upper value for this range</inlineHelpText>
    <label>Range Maximum</label>
    <precision>13</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>