force-app/main/default/objects/Village_Rating__c/fields/Range_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Range_Minimum__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Enter the minimum value or start value for this range</inlineHelpText>
    <label>Range Minimum</label>
    <precision>13</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>