force-app/main/default/objects/Village_Rating__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <inlineHelpText>Select the Village for this yield line item</inlineHelpText>
    <label>Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipName>Village_Yields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>