force-app/main/default/objects/Village_Rating__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>Enter the year to which this yield item applies</inlineHelpText>
    <label>Year</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>