force-app/main/default/objects/Village_Rating__c/fields/Yield_Classification__c.field-meta.xml
<CustomField>
    <fullName>Yield_Classification__c</fullName>
    <inlineHelpText>Select  the classification for this yield item</inlineHelpText>
    <label>Yield Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Income</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>