force-app/main/default/objects/Village_Rating__c/fields/Yield_Type__c.field-meta.xml
<CustomField>
    <fullName>Yield_Type__c</fullName>
    <inlineHelpText>Enter the type of yield, either Income or Sales</inlineHelpText>
    <label>Yield Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>