force-app/main/default/objects/Village_Rating__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Year__c</columns>
    <columns>Yield_Classification__c</columns>
    <columns>Yield_Type__c</columns>
    <columns>Rating__c</columns>
    <columns>Range_Minimum__c</columns>
    <columns>Range_Maximum__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>