force-app/main/default/objects/Village_Rating__c/listViews/All_2016_Ratings1.listView-meta.xml
<ListView>
    <fullName>All_2016_Ratings1</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Year__c</columns>
    <columns>Yield_Classification__c</columns>
    <columns>Rating__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Range_Minimum__c</columns>
    <columns>Range_Maximum__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2017</value>
    </filters>
    <label>All 2017 Ratings</label>
    <language>en_US</language>
</ListView>