force-app/main/default/objects/Village_Rating__c/listViews/BV_Ratings.listView-meta.xml
<ListView>
    <fullName>BV_Ratings</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Year__c</columns>
    <columns>Yield_Classification__c</columns>
    <columns>Rating__c</columns>
    <columns>Range_Minimum__c</columns>
    <columns>Range_Maximum__c</columns>
    <columns>Yield_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2017,2018</value>
    </filters>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>BV Ratings</label>
    <language>en_US</language>
    <sharedTo>
        <group>LeaseFlow_All_Users</group>
    </sharedTo>
</ListView>