force-app/main/default/objects/Village_Rating__c/listViews/KV_Ratings.listView-meta.xml
<ListView>
    <fullName>KV_Ratings</fullName>
    <columns>NAME</columns>
    <columns>Village__c</columns>
    <columns>Year__c</columns>
    <columns>Yield_Classification__c</columns>
    <columns>Rating__c</columns>
    <columns>Range_Minimum__c</columns>
    <columns>Range_Maximum__c</columns>
    <columns>Yield_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Village__c</field>
        <operation>equals</operation>
        <value>Kildare</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>KV Ratings</label>
    <language>en_US</language>
</ListView>